--- a/app/views/month/_listing_content.erb
+++ b/app/views/month/_listing_content.erb
@@ -1,5 +1,3 @@
-<%#= render_table table -%>
-
 
 <% if @time_entries != nil %>
 
@@ -12,7 +10,7 @@
       <%te.each do |entry| %>
         <tr>
           <td><%= entry.date -%></td>
-          <td><%= entry.type -%></td>
+          <td><%= entry.hour_type -%></td>
           <td><%= entry.hours -%></td>
           <td><%= entry.notes -%></td>
         </tr>
@@ -23,4 +21,5 @@
     <p>No time entries for this period</p>
 <% end %>
 
-<%= render :partial => 'reports/download', :locals => { :params => params, :action => 'listing' } -%>
+<br/><hr/>
+Download report: <%= link_to image_tag("pdficon_small.gif", :alt => "pdf"), params.merge({:format => "pdf",:action => 'listing'})%>
