Refactored some tests

--- a/app/views/reports/billing.html.erb
+++ b/app/views/reports/billing.html.erb
@@ -24,7 +24,7 @@
 <hr/>
 
 <div id="billing_content">
-  <%= render :partial => 'billing_content', :locals => { :day => @day } -%>
+  <%= render :partial => 'billing_content', :locals => { :day => @day, :expected_days => @expected_days, :expected_hours => @expected_hours} %>
 </div>
 
 
