--- a/app/views/month/_sub_menu.erb
+++ b/app/views/month/_sub_menu.erb
@@ -1,6 +1,4 @@
 <p>
 <%=  link_to "Calender view", :action => 'calender' %> |
-<%#=  link_to "Month view", :action => 'month' %> 
-<%=  link_to "Listing view", :action => 'listing' %> |
-<%=  link_to "Public entries", :action => 'shared' %>
+<%=  link_to "Listing view", :action => 'listing' %> 
 </p>
