--- a/app/views/month/listing.html.erb
+++ b/app/views/month/listing.html.erb
@@ -21,5 +21,5 @@
 <hr/>
 
 <div id="listing_content">
-  <%= render :partial => 'listing_content', :locals => { :table => @table, :params => params } -%>
+  <%= render :partial => 'listing_content', :locals => { :time_entries => @time_entries, :params => params } -%>
 </div>
