--- a/app/views/reports/search.html.erb
+++ b/app/views/reports/search.html.erb
@@ -21,5 +21,5 @@
 <hr/>
 
 <div id="search_content">
-  <%= render :partial => 'search_content', :locals => { :table => @table} %>
+  <%= render :partial => 'search_content' %>
 </div>
