Moved customer to admin menu

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -30,4 +30,4 @@
   </p>
 <% end %>
 
-<%= link_to "Activity list", activities_url %>
+<%= link_to "Back", project_url(:id => @activity.project.id) %>
