--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -5,7 +5,7 @@
 
 <table>
   <tr>
-    <th>Name</th>
+    <th>Name</th><th>Show</th><th>Edit</th><th>Delete</th>
   </tr>
 
 <% @customer.projects.each do |project| %>
@@ -13,7 +13,9 @@
     <td><%=h project.name %></td>
     <td>
       <%= link_to image_tag("application_add.png", :title => "Manage"), project_path(project) %>
+    </td><td>
       <%= link_to image_tag("pencil.png", :title => "Edit"), edit_project_path(project) %>
+    </td><td>
       <%= link_to image_tag("delete.png", :title => "Delete"), project, :method => :delete, :confirm => 'Really remove project?' %>
     </td>
   </tr>
