--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -41,6 +41,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', user_path(@user) %> |
-<%= link_to 'User list', users_path %>
+<%= link_to 'Back', users_path %>
 
