--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,5 +19,8 @@
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'User list', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) %> 
+<% if @current_user.admin -%>
+	|
+	<%= link_to 'User list', users_path %>
+<% end -%>
