--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,10 @@
 					<span class="menu_item"><%= link_to "Review", user_month_review_path(@current_user, :id => :calendar), :class => "menu_link" %></span>
 					<% if @current_user.admin -%>
 						<span class="menu_item"><%= link_to "Reports", reports_path, :class => "menu_link" %></span>                                                
-						<span class="menu_item"><%= link_to "Admin", users_path, :class => "menu_link" %></span> 
+						<span class="menu_item"><%= link_to "Admin", users_path, :class => "menu_link" %></span>
 					<% end -%>
-                    <span class="menu_item"><%= link_to "Holidays", {:controller => :holidays}, :class => "menu_link" %></span>
+          <span class="menu_item"><%= link_to "Holidays", {:controller => :holidays}, :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Profile", user_path(@current_user), :class => "menu_link" %></span> 
 					<span class="menu_item"><%= link_to "Logout", {:controller => "user_sessions", :action => "destroy"}, :method => :delete, :class => "menu_link" %></span>
 			    <% else -%>
 					<span class="menu_item"><%= link_to "Login", new_user_session_path, :class => "menu_link" %></span>
