Replaced db:populate with rails db:seeds. Hopefully this will work better on heroku

--- a/app/views/holidays/vacation.html.erb
+++ b/app/views/holidays/vacation.html.erb
@@ -1,6 +1,6 @@
 
 <%## TODO: Hack find vacation through configuration %>
-<% activity = Activity.find_by_name("Vacation") %>
+<% activity = Activity.first %>
 
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
