--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,14 +15,16 @@
     <%= f.label :login %><br />
     <%= f.text_field :login %>
   </p>
-  <p>
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </p>
+  <% unless TimeFlux::CONFIG.use_ldap %>
+    <p>
+      <%= f.label :password %><br />
+      <%= f.password_field :password %>
+    </p>
+    <p>
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %>
+    </p>
+  <% end %>
   <p>
     <%= f.label :email %><br />
     <%= f.text_field :email %>
