tweaked apperance of time-entries. Removed css formatting of all tables

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -7,7 +7,7 @@
 
 <%= will_paginate @customers %>
 
-<table>
+<table class="regular">
   <tr>
     <th>Name</th><th>Show</th><th>Edit</th><th>Delete</th>
   </tr>
