--- a/app/views/holidays/holiday.html.erb
+++ b/app/views/holidays/holiday.html.erb
@@ -4,7 +4,7 @@
 <h1>Public Holidays</h1>
 <%= render :partial => 'sub_menu' -%>
 
-<table>
+<table class="regular">
   <tr>
     <th>Date</th>
     <th>Working Hours</th>
