--- a/app/views/hour_types/index.html.erb
+++ b/app/views/hour_types/index.html.erb
@@ -5,7 +5,7 @@
 <p class="notice"><%= flash[:notice] %></p>
 <p class="error"><%= flash[:error] %></p>
 <hr />
-<table>
+<table class="regular">
 
 	<tr>
 		<th>Name</th>
