--- a/app/views/month_reviews/listing.html.erb
+++ b/app/views/month_reviews/listing.html.erb
@@ -13,7 +13,7 @@
 <% if @time_entries != nil %>
   <% @time_entries.each do |activity, te| %>
     <h3><%= activity.customer_project_name %></h3>
-    <table>
+    <table class="regular">
       <tr>
         <th>Date</th>
 		<th>Hour Type</th>
